// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSpinner should render correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--dark"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="2"
      opacity=".45"
      rx="1"
      width="4"
      y="7"
    />
    <rect
      height="2"
      rx="1"
      width="4"
      x="12"
      y="7"
    />
    <rect
      height="2"
      opacity=".3"
      rx="1"
      transform="rotate(-90 7 16)"
      width="4"
      x="7"
      y="16"
    />
    <rect
      height="2"
      opacity=".65"
      rx="1"
      transform="rotate(-90 7 4)"
      width="4"
      x="7"
      y="4"
    />
    <rect
      height="2"
      opacity=".25"
      rx="1"
      transform="rotate(-120 11.134 15.428)"
      width="4"
      x="11.134"
      y="15.428"
    />
    <rect
      height="2"
      opacity=".55"
      rx="1"
      transform="rotate(-120 5.134 5.036)"
      width="4"
      x="5.134"
      y="5.036"
    />
    <rect
      height="2"
      opacity=".2"
      rx="1"
      transform="rotate(-150 14.428 12.866)"
      width="4"
      x="14.428"
      y="12.866"
    />
    <rect
      height="2"
      opacity=".5"
      rx="1"
      transform="rotate(-150 4.036 6.866)"
      width="4"
      x="4.036"
      y="6.866"
    />
    <rect
      height="2"
      opacity=".85"
      rx="1"
      transform="rotate(150 15.428 4.866)"
      width="4"
      x="15.428"
      y="4.866"
    />
    <rect
      height="2"
      opacity=".4"
      rx="1"
      transform="rotate(150 5.036 10.866)"
      width="4"
      x="5.036"
      y="10.866"
    />
    <rect
      height="2"
      opacity=".75"
      rx="1"
      transform="rotate(120 12.866 1.572)"
      width="4"
      x="12.866"
      y="1.572"
    />
    <rect
      height="2"
      opacity=".35"
      rx="1"
      transform="rotate(120 6.866 11.964)"
      width="4"
      x="6.866"
      y="11.964"
    />
  </svg>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with a "alignToButton" attribute 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--dark bpk-spinner--align-to-button"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="2"
      opacity=".45"
      rx="1"
      width="4"
      y="7"
    />
    <rect
      height="2"
      rx="1"
      width="4"
      x="12"
      y="7"
    />
    <rect
      height="2"
      opacity=".3"
      rx="1"
      transform="rotate(-90 7 16)"
      width="4"
      x="7"
      y="16"
    />
    <rect
      height="2"
      opacity=".65"
      rx="1"
      transform="rotate(-90 7 4)"
      width="4"
      x="7"
      y="4"
    />
    <rect
      height="2"
      opacity=".25"
      rx="1"
      transform="rotate(-120 11.134 15.428)"
      width="4"
      x="11.134"
      y="15.428"
    />
    <rect
      height="2"
      opacity=".55"
      rx="1"
      transform="rotate(-120 5.134 5.036)"
      width="4"
      x="5.134"
      y="5.036"
    />
    <rect
      height="2"
      opacity=".2"
      rx="1"
      transform="rotate(-150 14.428 12.866)"
      width="4"
      x="14.428"
      y="12.866"
    />
    <rect
      height="2"
      opacity=".5"
      rx="1"
      transform="rotate(-150 4.036 6.866)"
      width="4"
      x="4.036"
      y="6.866"
    />
    <rect
      height="2"
      opacity=".85"
      rx="1"
      transform="rotate(150 15.428 4.866)"
      width="4"
      x="15.428"
      y="4.866"
    />
    <rect
      height="2"
      opacity=".4"
      rx="1"
      transform="rotate(150 5.036 10.866)"
      width="4"
      x="5.036"
      y="10.866"
    />
    <rect
      height="2"
      opacity=".75"
      rx="1"
      transform="rotate(120 12.866 1.572)"
      width="4"
      x="12.866"
      y="1.572"
    />
    <rect
      height="2"
      opacity=".35"
      rx="1"
      transform="rotate(120 6.866 11.964)"
      width="4"
      x="6.866"
      y="11.964"
    />
  </svg>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--dark my-custom-class"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="2"
      opacity=".45"
      rx="1"
      width="4"
      y="7"
    />
    <rect
      height="2"
      rx="1"
      width="4"
      x="12"
      y="7"
    />
    <rect
      height="2"
      opacity=".3"
      rx="1"
      transform="rotate(-90 7 16)"
      width="4"
      x="7"
      y="16"
    />
    <rect
      height="2"
      opacity=".65"
      rx="1"
      transform="rotate(-90 7 4)"
      width="4"
      x="7"
      y="4"
    />
    <rect
      height="2"
      opacity=".25"
      rx="1"
      transform="rotate(-120 11.134 15.428)"
      width="4"
      x="11.134"
      y="15.428"
    />
    <rect
      height="2"
      opacity=".55"
      rx="1"
      transform="rotate(-120 5.134 5.036)"
      width="4"
      x="5.134"
      y="5.036"
    />
    <rect
      height="2"
      opacity=".2"
      rx="1"
      transform="rotate(-150 14.428 12.866)"
      width="4"
      x="14.428"
      y="12.866"
    />
    <rect
      height="2"
      opacity=".5"
      rx="1"
      transform="rotate(-150 4.036 6.866)"
      width="4"
      x="4.036"
      y="6.866"
    />
    <rect
      height="2"
      opacity=".85"
      rx="1"
      transform="rotate(150 15.428 4.866)"
      width="4"
      x="15.428"
      y="4.866"
    />
    <rect
      height="2"
      opacity=".4"
      rx="1"
      transform="rotate(150 5.036 10.866)"
      width="4"
      x="5.036"
      y="10.866"
    />
    <rect
      height="2"
      opacity=".75"
      rx="1"
      transform="rotate(120 12.866 1.572)"
      width="4"
      x="12.866"
      y="1.572"
    />
    <rect
      height="2"
      opacity=".35"
      rx="1"
      transform="rotate(120 6.866 11.964)"
      width="4"
      x="6.866"
      y="11.964"
    />
  </svg>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with type as light 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--light"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="2"
      opacity=".45"
      rx="1"
      width="4"
      y="7"
    />
    <rect
      height="2"
      rx="1"
      width="4"
      x="12"
      y="7"
    />
    <rect
      height="2"
      opacity=".3"
      rx="1"
      transform="rotate(-90 7 16)"
      width="4"
      x="7"
      y="16"
    />
    <rect
      height="2"
      opacity=".65"
      rx="1"
      transform="rotate(-90 7 4)"
      width="4"
      x="7"
      y="4"
    />
    <rect
      height="2"
      opacity=".25"
      rx="1"
      transform="rotate(-120 11.134 15.428)"
      width="4"
      x="11.134"
      y="15.428"
    />
    <rect
      height="2"
      opacity=".55"
      rx="1"
      transform="rotate(-120 5.134 5.036)"
      width="4"
      x="5.134"
      y="5.036"
    />
    <rect
      height="2"
      opacity=".2"
      rx="1"
      transform="rotate(-150 14.428 12.866)"
      width="4"
      x="14.428"
      y="12.866"
    />
    <rect
      height="2"
      opacity=".5"
      rx="1"
      transform="rotate(-150 4.036 6.866)"
      width="4"
      x="4.036"
      y="6.866"
    />
    <rect
      height="2"
      opacity=".85"
      rx="1"
      transform="rotate(150 15.428 4.866)"
      width="4"
      x="15.428"
      y="4.866"
    />
    <rect
      height="2"
      opacity=".4"
      rx="1"
      transform="rotate(150 5.036 10.866)"
      width="4"
      x="5.036"
      y="10.866"
    />
    <rect
      height="2"
      opacity=".75"
      rx="1"
      transform="rotate(120 12.866 1.572)"
      width="4"
      x="12.866"
      y="1.572"
    />
    <rect
      height="2"
      opacity=".35"
      rx="1"
      transform="rotate(120 6.866 11.964)"
      width="4"
      x="6.866"
      y="11.964"
    />
  </svg>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with type as primary 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--primary"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="2"
      opacity=".45"
      rx="1"
      width="4"
      y="7"
    />
    <rect
      height="2"
      rx="1"
      width="4"
      x="12"
      y="7"
    />
    <rect
      height="2"
      opacity=".3"
      rx="1"
      transform="rotate(-90 7 16)"
      width="4"
      x="7"
      y="16"
    />
    <rect
      height="2"
      opacity=".65"
      rx="1"
      transform="rotate(-90 7 4)"
      width="4"
      x="7"
      y="4"
    />
    <rect
      height="2"
      opacity=".25"
      rx="1"
      transform="rotate(-120 11.134 15.428)"
      width="4"
      x="11.134"
      y="15.428"
    />
    <rect
      height="2"
      opacity=".55"
      rx="1"
      transform="rotate(-120 5.134 5.036)"
      width="4"
      x="5.134"
      y="5.036"
    />
    <rect
      height="2"
      opacity=".2"
      rx="1"
      transform="rotate(-150 14.428 12.866)"
      width="4"
      x="14.428"
      y="12.866"
    />
    <rect
      height="2"
      opacity=".5"
      rx="1"
      transform="rotate(-150 4.036 6.866)"
      width="4"
      x="4.036"
      y="6.866"
    />
    <rect
      height="2"
      opacity=".85"
      rx="1"
      transform="rotate(150 15.428 4.866)"
      width="4"
      x="15.428"
      y="4.866"
    />
    <rect
      height="2"
      opacity=".4"
      rx="1"
      transform="rotate(150 5.036 10.866)"
      width="4"
      x="5.036"
      y="10.866"
    />
    <rect
      height="2"
      opacity=".75"
      rx="1"
      transform="rotate(120 12.866 1.572)"
      width="4"
      x="12.866"
      y="1.572"
    />
    <rect
      height="2"
      opacity=".35"
      rx="1"
      transform="rotate(120 6.866 11.964)"
      width="4"
      x="6.866"
      y="11.964"
    />
  </svg>
</DocumentFragment>
`;
